# clauselens-mcp

./: .env.example  LICENSE  README.md  auth.py  prompts.py  pyproject.toml  railway.toml  requirements.txt  schemas.py  server.py  taxonomy.py
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-06-14-clauselens-implementation.md
docs/superpowers/specs/: 2026-06-14-clauselens-design.md
tests/: test_auth.py  test_ratelimit.py  test_schemas.py  test_taxonomy.py
tests/tools/: test_fetch.py  test_segment.py  test_verify.py
tools/: fetch.py  segment.py  verify.py
