[project]
name = "clauselens-mcp"
version = "0.1.0"
description = "A production remote MCP server that turns Claude into a contract analyst."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0,<4",
    "pydantic>=2.0",
    "httpx",
    "trafilatura",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
